# TApp

./: CMakeLists.txt  README.md
include/: TApp.h
include/Application/: Application.h
include/Events/Event/: Event.h  Event.tpp
include/Events/EventDispatcher/: EventDispatcher.h  EventDispatcher.tpp
include/Events/EventListener/: EventListener.h
include/Events/EventManager/: EventManager.h  EventManager.tpp
include/Input/: InputEvents.h
include/Layers/Layer/: Layer.h
include/Layers/LayerStack/: LayerStack.h  LayerStack.tpp
include/Utils/Logging/: Logging.h
include/Utils/Memory/PoolAllocator/: PoolAllocator.h  PoolAllocator.tpp
include/Utils/Memory/Singleton/: Singleton.h  Singleton.tpp
include/Window/: Window.h  WindowEvents.h  WindowSettings.h
src/: main.cpp
src/Application/: Application.cpp
src/Window/: Window.cpp
